Bug #1521 - Mobile: Homepage "Who's online" info displays off screen on left

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1205,6 +1205,10 @@ body{
                     a{
                         color: @white;
                     }
+                    @media (max-width: @screen-xs-max){
+                        width: 100px;
+                        right: -10px;
+                    }
                 }
                 &:hover{
                     border: 1px solid @black;
